Spring project name

--- a/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeML.html
+++ b/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeML.html
@@ -63,7 +63,7 @@ fieldset {
   
 	  <div class="row g-5">
 		<div class="col-md-12">
-			<form id="checkForm" th:action="@{/dsl}" method="post" th:object="${config}" >  
+			<form id="checkForm" th:action="@{/dslML}" method="post" th:object="${config}" >  
 			<h3>Algorithm Component</h3>  
 				<fieldset>	
 						<div >        
