add default configurations

--- a/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeKNN.html
+++ b/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeKNN.html
@@ -72,8 +72,8 @@ fieldset {
 						<div >        
 						<input id="algorithm_feature_parent_1" type="checkbox" th:field="*{CollaborativeFiltering}" disabled> <label>Collaborative filtering </label>
 							<fieldset id="collaborative_sub" >        
-								<div><input id="coll_sub_feature_1" type="checkbox" th:field="*{ItemBased}" onclick="disable_sub_features('coll_sub_feature_1', 'coll_sub_feature_2')" disabled > Item based </div>		
-								<div> <input id="coll_sub_feature_2"  type="checkbox" th:field="*{UserBased}" checked > User Based  </div>
+								<div><input id="coll_sub_feature_1" type="checkbox" th:field="*{ItemBased}" onclick="disable_sub_features('coll_sub_feature_1', 'coll_sub_feature_2')"  > Item based </div>		
+								<div> <input id="coll_sub_feature_2"  type="checkbox" th:field="*{UserBased}" disabled > User Based  </div>
 							</fieldset>
 						</div>
 				
