--- a/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeML.html
+++ b/lev4rec/spring/lev4rec.spring/src/main/resources/templates/homeML.html
@@ -100,7 +100,7 @@ fieldset {
 										
 								</fieldset>
 										
-							<input id="class_sub_feature_2"  type="checkbox" th:field="*{UnsupervisedAlgorithm}" onclick="set_classifier_constraints('class_sub_feature_2')" disabled> UnsupervisedAlgorithm
+							<input id="class_sub_feature_2"  type="checkbox" th:field="*{UnsupervisedAlgorithm}"  disabled > UnsupervisedAlgorithm
 							
 								<fieldset id="unsupervised_sub" style="display: none;">
 									<div> <input id="unsupervised_sub_feature_1" type="checkbox" th:field="*{KNeighborhood}" onclick="set_unsupervised_constraints('unsupervised_sub_feature_1')">KNeighborhood </div>
